# WatchedRealSense

./: CMakeLists.txt  Dockerfile  README.md  package.xml  readme.txt
include/: RealSenseNode.h  Utils.h
src/: RealSenseNode.cpp  Utils.cpp  my_node.cpp  realsense_node.cpp
